# pgen

./: Cargo.toml  README.md  rustfmt.toml
examples/: complexish.pipeline  filter.pipeline  free_variables.pipeln  insert.pipeline  leapyear.pipeline  map.pipeline  match.pipeline  pipeline1.pipeln  reduce.pipeline  replace.pipeline  round.pipeline  spaces.pipeline  strToInt.pipeline  string_reverse.pipeline  substring_index.pipeline  successful.pipeline  test.pipeline  wrong_args.pipeline  zip.pipeline  zip2.pipeline
src/: ast.rs  codegen.rs  lib.rs  main.rs  mongo_config.rs  mongo_functions.rs  normalize.rs  parser.lalrpop  parser.rs  sanity.rs  util.rs
src/tests/: mod.rs  normalize_tests.rs  parser_tests.rs  serialize_tests.rs
