[package]
name = "pgen"
version = "0.1.0"
authors = ["Patrick Meredith <pmeredit@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
lalrpop-util = "0.13.1"
regex = "0.2.1"
indoc = "0.2"
lazy_static = "0.2"

[lib]
name = "pgen"
path = "src/lib.rs"

[[bin]]
name = "pgen"
path = "src/main.rs"
