[package]
name = "pgen"
version = "0.1.0"
authors = ["Patrick Meredith <pmeredit@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.15.0"

[dependencies]
lalrpop-util = "0.13.1"
regex = "0.2.1"
indoc = "0.2"
lazy_static = "0.2"
bson = "0.10"
serde_json = "1.0.6"
serde = "1.0.20"
serde_derive = "1.0.20"
clap = "2.29.2"

[dependencies.linked-hash-map]
version = "0.5.0"
features = ["serde_impl"]

[lib]
name = "pgen"
path = "src/lib.rs"

[[bin]]
name = "pgen"
path = "src/main.rs"
